--- a/amadeus/static/css/base/amadeus.css
+++ b/amadeus/static/css/base/amadeus.css
@@ -110,9 +110,7 @@
     padding-right: 0px;
 }
 .category-card-items i{
-  font-size: 25px !important;
-  margin-right: 10px;
-  margin-top: 6px;
+    margin-right: 10px;
 }
 
 .category-header i{
@@ -868,7 +866,7 @@ ul, li {
 
 /* Bottom Menu */
 .clearfix {
-    height: 80px;
+    height: 60px;
 }
 
 .bottom-menu {
@@ -876,8 +874,10 @@ ul, li {
     bottom: 0px;
     background: #F5F5F5;
     width: 100%;
-    padding: 15px 30px;
+    padding: 0px 30px;
     z-index: 999;
+    height: 50px;
+    background: #26A69A;
 }
 
 .mobile-menu {
@@ -891,10 +891,11 @@ ul, li {
 .mobile-menu .item {
     color: #FFFFFF;
     background: #26A69A;
-    margin-left: 10px;
-    margin-right: 10px;
     padding-top: 3px;
     text-align: center;
+    height: 50px;
+    width: 55px;
+    font-size: 35px;
 }
 
 .mobile-menu .item a{
