--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -13,66 +13,68 @@
 {% endblock sidebar %}
 
 {% block content %}
-<div class="row">
-	<div class="col-sm-7 col-sm-offset-4 col-md-6 col-md-offset-4 col-xs-8 col-xs-offset-3 col-lg-6 col-lg-offset-4  col-xl-6 col-xl-offset-4 ">
-		<div class="col-sm-9 col-sm-offset-2 col-md-8 col-md-offset-2 col-xs-9 col-xs-offset-2  col-lg-8 col-lg-offset-2  col-xl-8 col-xl-offset-2">
-			<img src="{% static 'img/amadeus.png' %}" class="img-responsive center-block logo-login " alt="logo amadeus">
-		</div>
-	</div>
-</div>
-
-<div class="row">
-	<div class="col-lg-8 col-lg-offset-3 col-md-8 col-md-offset-3 col-sm-9 col-sm-offset-3 col-xs-10 col-xs-offset-2">
-    {% if messages %}
-    {% for message in messages %}
-    <div class="alert alert-{{ message.tags }} alert-dismissible" role="alert">
-      <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-        <span aria-hidden="true">&times;</span>
-      </button>
-      <p>{{ message }}</p>
+    <div class="row">
+        <div class="col-lg-offset-1 col-md-offset-1">
+            <img src="{% static 'img/amadeus.png' %}" class="img-responsive center-block logo-login " alt="logo amadeus">
+        </div>
     </div>
-    {% endfor %}
-    {% endif %}
-    <div class="card">
-      <div class="card-block">
-        <div class="row">
-          <div class="col-md-12 text-center">
-            <h2 style="color:#43a251"><strong> {% trans 'Sign in with your account to continue' %} </strong></h2>
-          </div>
-        </div>
-        <form id="form-login" method="post" action="">
-          {% csrf_token %}
-          <div class="col-md-10 col-md-offset-1">
-            <div class="form-group">
-              <label for="inputEmail" class="control-label"> {% trans 'Email' %}</label>
-              <input form="form-login" for="inputSmall" type="text" name="email" class="form-control" placeholder="{% trans 'Email' %}" id="inputEmail" value="{% if username %}{{username}}{% endif %}">
-            </div>
-          </div>
-          <div class="col-md-10 col-md-offset-1">
-            <div class="form-group">
-              <label for="inputPassword" class="control-label"> {% trans 'Password' %}</label>
-              <input form="form-login" for="inputSmall" type="password" name="password" class="form-control" id="inputPassword" placeholder="{% trans 'Password' %}">
-            </div>
-          </div>
-        </form>
-        <div class="row">
-          <div class="col-md-5 col-xs-6 col-sm-6 col-lg-5 col-lg-offset-1 col-md-offset-1 text-center">
-            <button type="submite" class="btn btn-success btn-raised btn-block" form="form-login" style="position: initial;"> {% trans 'Log in' %} </button>
-          </div>
-          <div class="col-md-5 col-xs-6 col-sm-6 col-lg-5 text-center">
-            <a class="btn btn-default btn-raised btn-block" href="{% url 'users:signup' %}" formaction="#" style="position: initial;">{% trans 'Sign Up' %}</a>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-md-offset-1 col-md-10 text-right forgotPassword">
-            <a href="{% url 'users:forgot_pass' %}">{% trans 'Forgot your password?' %}</a>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
 
+    <div class="row">
+        <div class="col-lg-offset-2 col-md-offset-2 col-sm-offset-1 col-lg-9 col-md-9 col-sm-10">
+            {% if messages %}
+                {% for message in messages %}
+                    <div class="alert alert-{{ message.tags }} alert-dismissible" role="alert">
+                        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                        <p>{{ message }}</p>
+                    </div>
+                {% endfor %}
+            {% endif %}
+    
+            <div class="card">
+                <div class="card-block">
+                    <div class="row">
+                        <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 text-center">
+                            <h2 style="color:#43a251"><strong> {% trans 'Sign in with your account to continue' %} </strong></h2>
+                        </div>
+                    </div>
+                    <form id="form-login" method="post" action="">
+                        {% csrf_token %}
+                        <div class="col-lg-10 col-md-10 col-sm-10 col-lg-offset-1 col-md-offset-1 col-sm-offset-1">
+                            <div class="form-group">
+                                <label for="inputEmail" class="control-label"> {% trans 'Email' %}</label>
+                                <input form="form-login" for="inputSmall" type="text" name="email" class="form-control" placeholder="{% trans 'Email' %}" id="inputEmail" value="{% if username %}{{username}}{% endif %}">
+                            </div>
+                        </div>
+                        <div class="col-lg-10 col-md-10 col-sm-10 col-lg-offset-1 col-md-offset-1 col-sm-offset-1">
+                            <div class="form-group">
+                                <label for="inputPassword" class="control-label"> {% trans 'Password' %}</label>
+                                <input form="form-login" for="inputSmall" type="password" name="password" class="form-control" id="inputPassword" placeholder="{% trans 'Password' %}">
+                            </div>
+                        </div>
+                    </form>
+                    <div class="row">
+                        <div class="col-lg-10 col-md-10 col-sm-10 col-lg-offset-1 col-md-offset-1 col-sm-offset-1">
+                            <div class="col-md-6 col-xs-6 col-sm-6 col-lg-6 text-center">
+                                <button type="submite" class="btn btn-success btn-raised btn-block" form="form-login" style="position: initial;"> {% trans 'Log in' %} </button>
+                            </div>
+                            <div class="col-md-6 col-xs-6 col-sm-6 col-lg-6 text-center">
+                                <a class="btn btn-default btn-raised btn-block" href="{% url 'users:signup' %}" formaction="#" style="position: initial;">{% trans 'Sign Up' %}</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-sm-offset-1 col-md-10 col-lg-10 col-sm-10 col-xs-12">
+                            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 text-right forgotPassword">
+                                <a href="{% url 'users:forgot_pass' %}">{% trans 'Forgot your password?' %}</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 {% endblock%}
 
 {% block bottommenu %}
