--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -36,7 +36,7 @@
                 <div class="card-block">
                     <div class="row">
                         <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 text-center">
-                            <h2 style="color:#43a251"><strong> {% trans 'Sign in with your account to continue' %} </strong></h2>
+                            <h2 class="outside-title"><strong> {% trans 'Sign in with your account to continue' %} </strong></h2>
                         </div>
                     </div>
                     <form id="form-login" method="post" action="">
