--- a/users/templates/users/register.html
+++ b/users/templates/users/register.html
@@ -13,49 +13,45 @@
 {% endblock sidebar %}
 
 {% block content %}
-	{% if messages %}
-		{% for message in messages %}
-			<div class="alert alert-{{ message.tags }} alert-dismissible" role="alert">
-				<button type="button" class="close" data-dismiss="alert" aria-label="Close">
-					<span aria-hidden="true">&times;</span>
-				</button>
-				<p>{{ message }}</p>
-			</div>
-		{% endfor %}
-	{% endif %}
-	
 	<div class="row">
-		<div class="col-sm-7 col-sm-offset-4 col-md-6 col-md-offset-4 col-xs-8 col-xs-offset-3 col-lg-6 col-lg-offset-4  col-xl-6 col-xl-offset-4 ">
-			<div class="col-sm-9 col-sm-offset-2 col-md-8 col-md-offset-2 col-xs-9 col-xs-offset-2  col-lg-8 col-lg-offset-2  col-xl-8 col-xl-offset-2">
-				<img src="{% static 'img/amadeus.png' %}" class="img-responsive center-block logo-login " alt="logo amadeus">
-			</div>
-		</div>
+		<div class="col-lg-offset-1 col-md-offset-1">
+            <img src="{% static 'img/amadeus.png' %}" class="img-responsive center-block logo-login logo-register" alt="logo amadeus">
+        </div>
 	</div>
 
 	<div class="row">
-		<div class="col-lg-8 col-lg-offset-3 col-md-8 col-md-offset-3 col-sm-9 col-sm-offset-3 col-xs-10 col-xs-offset-2">
+		<div class="col-lg-offset-2 col-md-offset-2 col-sm-offset-1 col-lg-9 col-md-9 col-sm-10">
+			{% if messages %}
+				{% for message in messages %}
+					<div class="alert alert-{{ message.tags }} alert-dismissible" role="alert">
+						<button type="button" class="close" data-dismiss="alert" aria-label="Close">
+							<span aria-hidden="true">&times;</span>
+						</button>
+						<p>{{ message }}</p>
+					</div>
+				{% endfor %}
+			{% endif %}
+			
 			<div class="card">
 				<div class="card-body">
 					<div class="row">
-						<div class="col-md-12 text-center">
-							
-							<h2 style="color:#43a251"><strong>{% trans "User Register" %}</strong></h2>
+						<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 text-center">
+							<h2 class="outside-title"><strong>{% trans "User Register" %}</strong></h2>
 						</div>
 					</div>
 
-					<form class="{% if form.has_error %} has-error {% endif %} is-fileinput" method="post" enctype="multipart/form-data">
+					<form class="{% if form.has_error %} has-error {% endif %} form-horizontal is-fileinput" method="post" enctype="multipart/form-data">
 						{% csrf_token %}
 						{% for field in form %}
-							<div class="col-md-10 col-md-offset-1 col-sm-12 col-xs-12 col-lg-10 col-lg-offset-1">
-								<div class="row form-group">
-									<div class="col-md-3 col-sm-3 col-xs-5 col-lg-3 text-right">
-										{% if field.field.required %}
-											<label for="{{ field.auto_id }}" class="control-label">{{ field.label }}<span>*</span></label>
-										{% else %}
-											<label for="{{ field.auto_id }}" class="control-label">{{ field.label }}</label>
-										{% endif %}
-									</div>
-									<div class="col-md-9 col-sm-9 col-xs-7 col-lg-9">
+							<div class="col-lg-12 col-md-12 col-sm-12">
+								<div class="form-group form-group-sm">
+									{% if field.field.required %}
+										<label for="{{ field.auto_id }}" class="col-md-2 col-sm-2 col-xs-3 col-lg-2 control-label">{{ field.label }}<span>*</span></label>
+									{% else %}
+										<label for="{{ field.auto_id }}" class="col-md-2 col-sm-2 col-xs-3 col-lg-2 control-label">{{ field.label }}</label>
+									{% endif %}
+
+									<div class="col-md-10 col-sm-10 col-xs-9 col-lg-10">
 										{% if field.auto_id == 'id_image' %}
 											{% render_field field class='form-control' %}
 											<div class="input-group">
@@ -89,7 +85,7 @@
 							</div>
 						{% endfor %}
 						<div class="row">
-							<div class="col-md-10 col-md-offset-1 col-sm-12 col-xs-12 col-lg-10 col-lg-offset-1">
+							<div class="col-lg-12 col-md-12 col-sm-12">
 								<div class="pull-left">
 									<input type="submit" value="{% trans 'Register' %}" class="btn btn-raised btn-primary" />
 								</div>
