Adjusting outside pages responsive

--- a/users/templates/users/new_password.html
+++ b/users/templates/users/new_password.html
@@ -14,14 +14,13 @@
 
 {% block content %}
 	<div class="row">
-		<div class="col-sm-7 col-sm-offset-4 col-md-6 col-md-offset-4 col-xs-8 col-xs-offset-3 col-lg-6 col-lg-offset-4  col-xl-6 col-xl-offset-4 ">
-			<div class="col-sm-9 col-sm-offset-2 col-md-8 col-md-offset-2 col-xs-9 col-xs-offset-2  col-lg-8 col-lg-offset-2  col-xl-8 col-xl-offset-2">
-				<img src="{% static 'img/amadeus.png' %}" class="img-responsive center-block logo-login " alt="logo amadeus">
-			</div>
-		</div>
+		<div class="col-lg-offset-1 col-md-offset-1">
+            <img src="{% static 'img/amadeus.png' %}" class="img-responsive center-block logo-login logo-register" alt="logo amadeus">
+        </div>
 	</div>
+
 	<div class="row">
-		<div class="col-lg-8 col-lg-offset-3 col-md-8 col-md-offset-3 col-sm-9 col-sm-offset-3 col-xs-10 col-xs-offset-2">
+		<div class="col-lg-offset-2 col-md-offset-2 col-sm-offset-1 col-lg-9 col-md-9 col-sm-10">
     		{% if messages %}
     			{% for message in messages %}
     				<div class="alert alert-{{ message.tags }} alert-dismissible" role="alert">
@@ -32,27 +31,31 @@
     				</div>
     			{% endfor %}
     		{% endif %}
+
     		<div class="card">
       			<div class="card-block">
         			<div class="row">
-          				<div class="col-md-12 text-center">
-            				<h2 style="color:#43a251"><strong> {% trans 'Set new password' %} </strong></h2>
+          				<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 text-center">
+            				<h2 class="outside-title"><strong> {% trans 'Set new password' %} </strong></h2>
           				</div>
         			</div>
         			
         			<form id="form-reset" method="post" action="">
           				{% csrf_token %}
           				{% for field in form %}
-          					<div class="col-md-10 col-md-offset-1">
+          					<div class="col-lg-10 col-md-10 col-sm-10 col-lg-offset-1 col-md-offset-1 col-sm-offset-1">
 	          					<div class="form-group{% if form.has_error %} has-error {% endif %}">
 	          						{% if field.field.required %}
 										<label for="{{ field.auto_id }}" class="control-label">{{ field.label }} <span>*</span></label>
 									{% else %}
 										<label for="{{ field.auto_id }}" class="control-label">{{ field.label }}</label>
 									{% endif %}
+
 									{% render_field field class='form-control' %}
-									<span id="helpBlock" class="help-block">{{ field.help_text }}</span>
-									{% if field.errors %}
+									
+                                    <span id="helpBlock" class="help-block">{{ field.help_text }}</span>
+									
+                                    {% if field.errors %}
 										<div class="alert alert-danger alert-dismissible" role="alert">
 						  					<button type="button" class="close" data-dismiss="alert" aria-label="Close">
 						  						<span aria-hidden="true">&times;</span>
@@ -69,12 +72,14 @@
           				{% endfor %}
         			</form>
         			<div class="row">
-          				<div class="col-md-5 col-xs-6 col-sm-6 col-lg-5 col-lg-offset-1 col-md-offset-1 text-center">
-            				<button type="submit" class="btn btn-success btn-raised btn-block" form="form-reset" style="position: initial;"> {% trans 'Reset' %} </button>
-          				</div>
-          				<div class="col-md-5 col-xs-6 col-sm-6 col-lg-5 text-center">
-            				<a class="btn btn-default btn-raised btn-block" href="{% url 'users:login' %}" formaction="#" style="position: initial;">{% trans 'Back' %}</a>
-          				</div>
+                        <div class="col-lg-10 col-md-10 col-sm-10 col-lg-offset-1 col-md-offset-1 col-sm-offset-1">
+              				<div class="col-md-6 col-xs-6 col-sm-6 col-lg-6 text-center">
+                				<button type="submit" class="btn btn-success btn-raised btn-block" form="form-reset" style="position: initial;"> {% trans 'Reset' %} </button>
+              				</div>
+              				<div class="col-md-6 col-xs-6 col-sm-6 col-lg-6 text-center">
+                				<a class="btn btn-default btn-raised btn-block" href="{% url 'users:login' %}" formaction="#" style="position: initial;">{% trans 'Back' %}</a>
+              				</div>
+                        </div>
         			</div>
         		</div>
       		</div>
