--- a/amadeus/static/css/base/amadeus.css
+++ b/amadeus/static/css/base/amadeus.css
@@ -113,6 +113,11 @@
     margin-right: 10px;
 }
 
+.category-header .dropdown-menu i {
+    font-size: 20px !important;
+    float: auto;
+}
+
 .category-header i{
     color: white;
     font-size: 20px;
