--- a/categories/templates/categories/list.html
+++ b/categories/templates/categories/list.html
@@ -16,7 +16,11 @@
     {% if messages %}
         {% for message in messages %}
             <script type="text/javascript">
-                alertify.success('{{message}}');
+                {% if message.tags == "danger" %}
+                    alertify.error('{{message}}');
+                {% else %}
+                    alertify.success('{{message}}');
+                {% endif %}
             </script>
         {% endfor %}
     {% endif %}
