modal is opening correct and deleting subject but still has no success message

--- a/subjects/templates/subjects/delete.html
+++ b/subjects/templates/subjects/delete.html
@@ -26,7 +26,7 @@
         {% if index %}
         <script>
           $("#delete_form").submit(function(event) {
-            RemoveSubject.remove("{% url 'course:delete_subject' subject.slug %}",$(this).serialize(),"#subject_{{subject.slug}}");
+            RemoveSubject.remove("{% url 'subjects:delete' subject.slug %}",$(this).serialize(),"#subject_{{subject.slug}}");
             event.preventDefault();
           });
         </script>
