--- a/subjects/templates/subjects/list.html
+++ b/subjects/templates/subjects/list.html
@@ -167,5 +167,10 @@
     </div>
     <div id="modal_course">
     </div>
+
+    <div id="modal_subject">
+        
+    </div>
+    
     <script type="text/javascript" src="{% static 'js/course.js' %}"></script>
 {% endblock %}
