--- a/subjects/templates/subjects/subject_card.html
+++ b/subjects/templates/subjects/subject_card.html
@@ -51,9 +51,9 @@
             <p>{{subject.description_brief|safe}}</p>
                           
             {% if request.user in subject.students.all or request.user in subject.professor.all or request.user.is_staff or request.user in category.coordinators.all %}
-                <a href="#"><button class="access-subject"> {% trans "Access Subject" %}</button></a>
+                <a href="#" class="access-subject btn btn-primary btn-raised"> {% trans "Access Subject" %}</a>
             {% else %}
-                <a href="#"><button class="subscribe-subject"> {% trans "Subscribe to Subject" %}</button></a>
+                <a href="#" class="subscribe-subject btn btn-primary btn-raised"> {% trans "Subscribe to Subject" %}</a>
             {% endif %}
         </div>
     </div>
@@ -109,9 +109,9 @@
             <p>{{subject.description_brief|safe}}</p>
                           
             {% if request.user in subject.students.all or request.user in subject.professor.all or request.user.is_staff or request.user in category.coordinators.all   %}
-                <a href="#"><button class="access-subject"> {% trans "Access Subject" %}</button></a>
+                <a href="#" class="access-subject btn btn-primary btn-raised"> {% trans "Access Subject" %}</a>
             {% else %}
-                <a href="#"><button class="subscribe-subject"> {% trans "Subscribe to Subject" %}</button></a>
+                <a href="#" class="subscribe-subject btn btn-primary btn-raised"> {% trans "Subscribe to Subject" %}</a>
             {% endif %}
         </div>
     </div>
