created subject detail view where it shows it topics

--- a/subjects/templates/subjects/subject_card.html
+++ b/subjects/templates/subjects/subject_card.html
@@ -49,11 +49,14 @@
             </div>
 
             <p>{{subject.description_brief|safe}}</p>
-                          
-            {% if request.user in subject.students.all or request.user in subject.professor.all or request.user.is_staff or request.user in category.coordinators.all %}
-                <a href="#" class="access-subject btn btn-primary btn-raised"> {% trans "Access Subject" %}</a>
-            {% else %}
-                <a href="#" class="subscribe-subject btn btn-primary btn-raised"> {% trans "Subscribe to Subject" %}</a>
+            {% if show_buttons %}                 
+                                        
+                {% if request.user in subject.students.all or request.user in subject.professor.all or request.user.is_staff or request.user in category.coordinators.all %}
+                    <a href="{% url 'subjects:view' subject.slug %}" class="access-subject btn btn-primary btn-raised"> {% trans "Access Subject" %}</a>
+                {% else %}
+                    <a href="#" class="subscribe-subject btn btn-primary btn-raised"> {% trans "Subscribe to Subject" %}</a>
+                {% endif %}
+
             {% endif %}
         </div>
     </div>
@@ -107,11 +110,14 @@
             </div>
 
             <p>{{subject.description_brief|safe}}</p>
-                          
-            {% if request.user in subject.students.all or request.user in subject.professor.all or request.user.is_staff or request.user in category.coordinators.all   %}
-                <a href="#" class="access-subject btn btn-primary btn-raised"> {% trans "Access Subject" %}</a>
-            {% else %}
-                <a href="#" class="subscribe-subject btn btn-primary btn-raised"> {% trans "Subscribe to Subject" %}</a>
+             {% if show_buttons %}                 
+                                        
+                {% if request.user in subject.students.all or request.user in subject.professor.all or request.user.is_staff or request.user in category.coordinators.all %}
+                    <a href="{% url 'subjects:view' subject.slug %}" class="access-subject btn btn-primary btn-raised"> {% trans "Access Subject" %}</a>
+                {% else %}
+                    <a href="#" class="subscribe-subject btn btn-primary btn-raised"> {% trans "Subscribe to Subject" %}</a>
+                {% endif %}
+
             {% endif %}
         </div>
     </div>
