--- a/subjects/templates/subjects/initial.html
+++ b/subjects/templates/subjects/initial.html
@@ -3,9 +3,19 @@
 {% load static pagination i18n %}
 
 {% block content %}
+	{% if messages %}
+        {% for message in messages %}
+            <div class="alert alert-{{ message.tags }} alert-dismissible" role="alert">
+                <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+                <p>{{ message }}</p>
+            </div>
+        {% endfor %}
+    {% endif %}
+    
 	<h2 class=" my-subjects-title"><b><i>{% trans "Palavras-chave mais populares" %}</i></b></h2>
 	<div id="" class="col-md-12">
-
 		<div class="users-cloud div-users-cloud">
 			<ul class=" users-cloud">
 				{% for tag in tags %}
@@ -24,6 +34,7 @@
 		</div>
 	</div>
 
-	{% pagination request paginator page_obj %} 
+	{% pagination request paginator page_obj %}
+
     <script type="text/javascript" src="{% static 'js/course.js' %}"></script>
 {% endblock content %}
