--- a/subjects/templates/subjects/subject_card.html
+++ b/subjects/templates/subjects/subject_card.html
@@ -11,7 +11,7 @@
                     </h4>
 
                     <div class="col-md-5 pull-right category-card-items">
-                        {% if request.user in subject.professor.all or request.user in category.coordinators.all or request.user.is_staff %}
+                        {% if request.user in subject.professor.all or request.user in subject.category.coordinators.all or request.user.is_staff %}
                             <a href="" id="moreActions" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> 
                                 <i class="fa fa-ellipsis-v" aria-hidden="true"></i>
                             </a>
@@ -112,7 +112,7 @@
             <p>{{subject.description_brief|safe}}</p>
              {% if show_buttons %}                 
                                         
-                {% if request.user in subject.students.all or request.user in subject.professor.all or request.user.is_staff or request.user in category.coordinators.all %}
+                {% if request.user in subject.students.all or request.user in subject.professor.all or request.user.is_staff or request.user in subject.category.coordinators.all %}
                     <a href="{% url 'subjects:view' subject.slug %}" class="access-subject btn btn-primary btn-raised"> {% trans "Access Subject" %}</a>
                 {% else %}
                     <a href="#" class="subscribe-subject btn btn-primary btn-raised"> {% trans "Subscribe to Subject" %}</a>
