Adding security settings link

--- a/amadeus/templates/base.html
+++ b/amadeus/templates/base.html
@@ -114,7 +114,7 @@
                                                 <div class="panel-body">
                                                     <ul class="submenu">
                                                         <li><a href="{% url 'mailsender:update' %}">{% trans 'Mail Sender' %}</a></li>
-                                                        <li><a href="{% url 'categories:index' %}">{% trans 'Security' %}</a></li>
+                                                        <li><a href="{% url 'security:update' %}">{% trans 'Security' %}</a></li>
                                                         <li><a href="{% url 'categories:index' %}">{% trans 'Theme' %}</a></li>
                                                     </ul>
                                                 </div>
