--- a/mailsender/templates/mailsender/update.html
+++ b/mailsender/templates/mailsender/update.html
@@ -6,8 +6,7 @@
 
 {% block breadcrumbs %}
   	{{ block.super }}
-  	{% breadcrumb 'Settings' 'subjects:home' %}
-    {% breadcrumb 'Mail Sender' 'mailsender:update' %}
+    {% breadcrumb 'Settings: Mail Sender' 'mailsender:update' %}
 {% endblock %}
 
 {% block content %}
