--- a/security/templates/security/update.html
+++ b/security/templates/security/update.html
@@ -8,3 +8,29 @@
   	{{ block.super }}
     {% breadcrumb 'Settings: Security' 'security:update' %}
 {% endblock %}
+
+{% block content %}
+	<div class="card">
+		<div class="card-content">
+			<div class="card-body">
+				<form method="post" action="" enctype="multipart/form-data">
+					{% csrf_token %}
+					{% for field in form %}
+						<div class="checkbox">
+							<label for="{{ field.auto_id }}">
+		      					{% render_field field %} {{field.label}}
+		  					</label>
+						</div>
+					{% endfor %}
+					<div class="col-md-12 col-lg-12 col-sm-12 col-xs-12">
+						<div class="text-center">
+							<input type="submit" value="{% trans 'Save' %}" class="btn btn-raised btn-primary" />
+						</div>
+					</div>
+				</form>
+			</div>
+		</div>
+	</div>
+	<br clear="all" />
+	<br clear="all" />
+{% endblock %}
