--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -59,9 +59,11 @@
                             <div class="col-md-6 col-xs-6 col-sm-6 col-lg-6 text-center">
                                 <button type="submite" class="btn btn-success btn-raised btn-block" form="form-login" style="position: initial;"> {% trans 'Log in' %} </button>
                             </div>
-                            <div class="col-md-6 col-xs-6 col-sm-6 col-lg-6 text-center">
-                                <a class="btn btn-default btn-raised btn-block" href="{% url 'users:signup' %}" formaction="#" style="position: initial;">{% trans 'Sign Up' %}</a>
-                            </div>
+                            {% if not deny_register %}
+                                <div class="col-md-6 col-xs-6 col-sm-6 col-lg-6 text-center">
+                                    <a class="btn btn-default btn-raised btn-block" href="{% url 'users:signup' %}" formaction="#" style="position: initial;">{% trans 'Sign Up' %}</a>
+                                </div>
+                            {% endif %}
                         </div>
                     </div>
                     <div class="row">
