--- a/amadeus/templates/base.html
+++ b/amadeus/templates/base.html
@@ -115,7 +115,7 @@
                                                     <ul class="submenu">
                                                         <li><a href="{% url 'mailsender:update' %}">{% trans 'Mail Sender' %}</a></li>
                                                         <li><a href="{% url 'security:update' %}">{% trans 'Security' %}</a></li>
-                                                        <li><a href="{% url 'categories:index' %}">{% trans 'Theme' %}</a></li>
+                                                        <li><a href="{% url 'themes:manage' %}">{% trans 'Theme' %}</a></li>
                                                     </ul>
                                                 </div>
                                             </div>
