--- a/subjects/templates/subjects/list.html
+++ b/subjects/templates/subjects/list.html
@@ -99,7 +99,10 @@
                             
                             <div class="panel-group subject-group" id="{{ category.slug }}-accordion" role="tablist" aria-multiselectable="true">
                                 {% for subject in category.subject_category.all  %}
-                                    {% include "subjects/subject_card.html" %}
+                                    {% if request.user in subject.students.all or request.user.is_staff or request.user in subject.professor.all %}
+                                        
+                                        {% include "subjects/subject_card.html" %}
+                                    {% endif %}
                                 {% endfor %}
                             </div>
                         </div>
