--- a/amadeus/templates/base.html
+++ b/amadeus/templates/base.html
@@ -47,6 +47,7 @@
 	<!-- Custom styles -->
     <link rel="stylesheet" type="text/css" href="{% static 'css/base/amadeus_responsive.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'css/base/amadeus.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'css/themes/green.css' %}">
 
 	<!--Javascript block for specific-app ones -->
 	<script src="{% static 'js/base/amadeus.js' %}"></script>    
