--- a/amadeus/templates/base.html
+++ b/amadeus/templates/base.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 
-{% load static i18n %}
-{% load static i18n permission_tags django_bootstrap_breadcrumbs %}
+{% load static i18n django_bootstrap_breadcrumbs css_theme %}
 {% get_current_language as LANGUAGE_CODE %}
 
 <html>
@@ -47,7 +46,7 @@
 	<!-- Custom styles -->
     <link rel="stylesheet" type="text/css" href="{% static 'css/base/amadeus_responsive.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'css/base/amadeus.css' %}">
-    <link rel="stylesheet" type="text/css" href="{% static 'css/themes/green.css' %}">
+    
 
 	<!--Javascript block for specific-app ones -->
 	<script src="{% static 'js/base/amadeus.js' %}"></script>    
@@ -60,6 +59,7 @@
 	<!-- Summernote -->
 	<script src="{% static 'summernote/summernote.js' %}" type="text/javascript"></script>
 	<link href="{% static 'summernote/summernote.css' %}" type="text/css" rel="stylesheet" />
+    {% css_theme %}
 
 </head>
 <body>
