--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -56,22 +56,34 @@
                     </form>
                     <div class="row">
                         <div class="col-lg-10 col-md-10 col-sm-10 col-lg-offset-1 col-md-offset-1 col-sm-offset-1">
-                            <div class="col-md-6 col-xs-6 col-sm-6 col-lg-6 text-center">
-                                <button type="submite" class="btn btn-success btn-raised btn-block" form="form-login" style="position: initial;"> {% trans 'Log in' %} </button>
-                            </div>
                             {% if not deny_register %}
                                 <div class="col-md-6 col-xs-6 col-sm-6 col-lg-6 text-center">
+                                    <button type="submite" class="btn btn-success btn-raised btn-block" form="form-login" style="position: initial;"> {% trans 'Log in' %} </button>
+                                </div>
+                                <div class="col-md-6 col-xs-6 col-sm-6 col-lg-6 text-center">
                                     <a class="btn btn-default btn-raised btn-block" href="{% url 'users:signup' %}" formaction="#" style="position: initial;">{% trans 'Sign Up' %}</a>
+                                </div>
+                            {% else %}
+                                <div class="col-md-6 col-xs-6 col-sm-6 col-lg-6 col-lg-offset-3 col-md-offset-3 col-sm-offset-3 col-xs-offset-3 text-center">
+                                    <button type="submite" class="btn btn-success btn-raised btn-block" form="form-login" style="position: initial;"> {% trans 'Log in' %} </button>
                                 </div>
                             {% endif %}
                         </div>
                     </div>
                     <div class="row">
-                        <div class="col-sm-offset-1 col-md-10 col-lg-10 col-sm-10 col-xs-12">
-                            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 text-right forgotPassword">
-                                <a href="{% url 'users:forgot_pass' %}">{% trans 'Forgot your password?' %}</a>
+                        {% if not deny_register %}
+                            <div class="col-sm-offset-1 col-md-10 col-lg-10 col-sm-10 col-xs-12">
+                                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 text-right forgotPassword">
+                                    <a href="{% url 'users:forgot_pass' %}">{% trans 'Forgot your password?' %}</a>
+                                </div>
                             </div>
-                        </div>
+                        {% else %}
+                            <div class="col-md-12 col-lg-12 col-sm-12 col-xs-12">
+                                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 text-center forgotPassword">
+                                    <a href="{% url 'users:forgot_pass' %}">{% trans 'Forgot your password?' %}</a>
+                                </div>
+                            </div>
+                        {% endif %}
                     </div>
                 </div>
             </div>
