--- a/amadeus/templates/base.html
+++ b/amadeus/templates/base.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-{% load static i18n django_bootstrap_breadcrumbs css_theme %}
+{% load static i18n django_bootstrap_breadcrumbs %}
 {% get_current_language as LANGUAGE_CODE %}
 
 <html>
@@ -59,7 +59,9 @@
 	<!-- Summernote -->
 	<script src="{% static 'summernote/summernote.js' %}" type="text/javascript"></script>
 	<link href="{% static 'summernote/summernote.css' %}" type="text/css" rel="stylesheet" />
-    {% css_theme %}
+    {% with 'css/themes/'|add:theme.css_style|add:'.css' as theme_selected %}
+        <link rel="stylesheet" type="text/css" href="{% static theme_selected %}">
+    {% endwith %}
 
 </head>
 <body>
@@ -73,7 +75,7 @@
                 </button>
                 <a class="navbar-brand" href="{% url 'subjects:home' %}">
                     <img class="logo pull-left" src="{% static 'img/topo-amadeus-white.png'  %}" alt="Logo" />
-                    <span class="pull-right project_name">Projeto Amadeus</span>
+                    <span class="pull-right project_name">{{ theme.title }}</span>
                 </a>
             </div>
             <div class="navbar-collapse collapse navbar-responsive-collapse">
