--- a/amadeus/templates/base.html
+++ b/amadeus/templates/base.html
@@ -5,7 +5,7 @@
 
 <html>
 <head>
-	<title>{{ title }} | Amadeus</title>
+	<title>{{ title }} | {{ theme.title }}</title>
 
     <!-- jQuery & jQuery UI -->
     <script type="text/javascript" src="{% static 'js/jquery-3.1.0.min.js' %}"></script>
