--- a/amadeus/templates/base.html
+++ b/amadeus/templates/base.html
@@ -12,7 +12,7 @@
     <script type="text/javascript" src="{% static 'js/jquery-ui.js' %}"></script>
 
 	<meta http-equiv="Cache-Control" content="no-cache, no-store" />
-	<link href="{% static 'img/topo-amadeus.png' %}" rel="shortcut icon" />
+	<link href="{{ theme.favicon }}" rel="shortcut icon" />
 	<!-- Roboto font -->
 	<link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Roboto:300,400,500,700" type="text/css">
 	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -74,7 +74,7 @@
                     <span class="icon-bar"></span>
                 </button>
                 <a class="navbar-brand" href="{% url 'subjects:home' %}">
-                    <img class="logo pull-left" src="{% static 'img/topo-amadeus-white.png'  %}" alt="Logo" />
+                    <img class="logo pull-left" src="{{ theme.small_logo_url }}" alt="Logo" />
                     <span class="pull-right project_name">{{ theme.title }}</span>
                 </a>
             </div>
