--- a/users/templates/users/forgot_password.html
+++ b/users/templates/users/forgot_password.html
@@ -15,7 +15,7 @@
 {% block content %}
 	<div class="row">
 		<div class="col-lg-offset-1 col-md-offset-1">
-            <img src="{% static 'img/amadeus.png' %}" class="img-responsive center-block logo-login logo-register" alt="logo amadeus">
+            <img src="{{ theme.large_logo_url }}" class="img-responsive center-block logo-login logo-register" alt="logo amadeus">
         </div>
 	</div>
 
