--- a/amadeus/static/css/themes/green.css
+++ b/amadeus/static/css/themes/green.css
@@ -268,3 +268,8 @@ a, a:focus, a:hover {
 	color: #555;
     border: 2px dashed #555;
 }
+
+.footer {
+    color: #FFFFFF;
+    background: #26A69A;
+}
