--- a/amadeus/templates/base.html
+++ b/amadeus/templates/base.html
@@ -187,6 +187,9 @@
         </div>
     </div>
 
+    {% block footer %}
+    {% endblock %}
+
     {% block bottommenu %}
         <div class="clearfix visible-xs visible-sm"></div>
         <div class="bottom-menu visible-xs visible-sm">
