--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -91,5 +91,19 @@
     </div>
 {% endblock%}
 
+{% block footer %}
+    {% if theme.footer_note != '' and theme.footer_note != '<p><br></p>' %}
+        <div class="footer">
+            <div class="row">
+                <div class="col-md-12 text-center">
+                    {% autoescape off %}
+                        {{ theme.footer_note }}
+                    {% endautoescape %}
+                </div>
+            </div>
+        </div>
+    {% endif %}
+{% endblock %}
+
 {% block bottommenu %}
 {% endblock %}
